Added social_wall and reorganized scss

--- a/index.html
+++ b/index.html
@@ -100,160 +100,17 @@ layout: default
   </div>
 </div>
 <div class="social_feed_section">
-  <div class="social_feed_wrap">
-    <div class="w-row">
-      <div class="w-col w-col-4 w-col-stack">
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-      </div>
-      <div class="w-col w-col-4 w-col-stack">
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-      </div>
-      <div class="w-col w-col-4 w-col-stack">
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-        <div class="social_feed_item">
-          <div class="social_info w-row">
-            <div class="w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img class="avatar" src="images/76RMOxmF.jpg">
-            </div>
-            <div class="social_name_wrap w-col w-col-8 w-col-small-8 w-col-tiny-8">
-              <h1 class="h1_social_name">Gwladys Epangue</h1>
-              <div class="handle">@GwladysEpangue</div>
-            </div>
-            <div class="col-social-logo w-col w-col-2 w-col-small-2 w-col-tiny-2">
-              <img src="images/twitter-logo-silhouette.svg" width="28">
-            </div>
-          </div>
-          <p class="social_feed_item_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.&nbsp;</p>
-          <div class="social_feed_item_date">6:15 PM - 24 Oct 2016</div>
-        </div>
-      </div>
-    </div>
-  </div>
+
+  {% social_wall
+
+    tw_username: lausanne2020,
+    tw_count: 4,
+
+    fb_username: lausanne2020,
+    fb_count: 5,
+
+  %}
+
 </div>
 <div class="partners_section container">
   <div class="partners">
