Random title home

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: default
 <div class="hero">
   <div class="enorme_claim_wrap container">
     <h1 class="the_claim">Lausanne<br/><span class="accent">aux couleurs des jeux</span></h1>
+    <h1 class="the_claim">Mes<br/><span class="accent">jeux olympiques</span></h1>
+    <h1 class="the_claim">Jeux d'hiver<br/><span class="accent">de la jeunesse</span></h1>
   </div>
 </div>
 <div class="newsletter_cta">
