--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@ layout: default
 
   {% social_wall
 
-    tw_username: media_heigvd,
-    tw_count: 50,
+    tw_username: lausanne2020,
+    tw_count: 4,
 
-    fb_username: media.heigvd,
-    fb_count: 50,
+    fb_username: lausanne2020,
+    fb_count: 5,
 
   %}
 
