Display map of venues on the home page

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ layout: default
   </div>
 </div>
 <div class="map_section" data-ix="scroll-nav">
-  <div class="map_wrap">
-    <img class="map" sizes="(max-width: 991px) 80vw, 50vw" src="images/map_test.png" srcset="images/map_test-p-500x323.png 500w, images/map_test-p-800x517.png 800w, images/map_test-p-1080x697.png 1080w, images/map_test.png 1130w">
+  <div id="map">
+    
   </div>
 </div>
 <div class="facts">
