--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 layout: default
 ---
 <div class="hero">
-  <div class="enorme_claim_wrap container">
+  <div class="container">
     <h1 class="the_claim">Lausanne<br/><span class="accent">aux couleurs des jeux</span></h1>
     <h1 class="the_claim">Mes<br/><span class="accent">jeux olympiques</span></h1>
     <h1 class="the_claim">Jeux d'hiver<br/><span class="accent">de la jeunesse</span></h1>
   </div>
 </div>
 <div class="about_yog_section">
-  <div class="about_yog_wrap container">
+  <div class="container">
     <div class="row">
       <div class="col-md-4">
         <h1 class="h1_about_yog">ABOUT <br>THE YOG</h1>
@@ -20,12 +20,11 @@ layout: default
     </div>
   </div>
 </div>
-<div class="latestnews_section">
-  <div class="newsletter_cta_wrap container">
+<div class="latestnews_section container">
     <h1 class="h1_big_news h1_newsletter_cta">Latest news</h1>
     <div class="row">
       {% for new in site.data.contentful.spaces.news.news limit:3 %}
-        <div class="col-nopadd col-md-4">
+        <div class="col-md-4">
           <div class="news_wrap">
             <div class="">
               <img src="{{ new.image.url }}">
@@ -49,10 +48,9 @@ layout: default
         </div>
       {% endfor %}
     </div>
-  </div>
 </div>
 <div class="marchandising_section">
-  <div class="marchandising_wrap container">
+  <div class="container">
     <div class="row">
       <div class="marchandising_col_1 col-md-6">
         <h1 class="h1_newsletter_cta shop_cta">Discover all the goodies in our marchandising partner shop!</h1>
@@ -80,7 +78,7 @@ layout: default
     </div>
 </div>
 <div class="newsletter_cta">
-  <div class="newsletter_cta_wrap container">
+  <div class="container">
     <div class="row">
       <div class="col-md-6">
         <h1 class="h1_newsletter_cta">Subscribe to receive news about <span class="l2020">Lausanne2020!</span></h1>
